--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
